# predicate-logic

./: README.md  check_all.py  main.py  predicate_logic_original.py  pyproject.toml  run_tests.py
examples/: basic_examples.py  family_relations.py  knowledge_base_example.py
predicate_logic/: __init__.py  knowledge_base.py  logical_operators.py  patterns.py  predicates.py  quantifiers.py  relations.py
tests/: test_logical_operators.py  test_predicates.py  test_quantifiers.py
